--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+ <nav class="navbar">
+    <div class="logo">ABC University</div>
+
+    <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="admission.html">Admission</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
 <nav>
   <h2>ABC University</h2>
   <ul>
@@ -15,6 +28,7 @@
     <li><a href="login.html">Login</a></li>
   </ul>
 </nav>
+  
 
 <section class="hero">
   <h1>Welcome to ABC University</h1>
