--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>ABC University</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>ABC University</title>
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
- <nav class="navbar">
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar">
     <div class="logo">ABC University</div>
-
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -18,22 +20,86 @@
     </ul>
 </nav>
 
-<nav>
-  <h2>ABC University</h2>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="courses.html">Courses</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li><a href="login.html">Login</a></li>
-  </ul>
-</nav>
-  
-
+<!-- ================= HERO SECTION ================= -->
 <section class="hero">
-  <h1>Welcome to ABC University</h1>
-  <p>Empowering Education for Future</p>
+    <h1>Welcome to ABC University</h1>
+    <p>Empowering Students Through Quality Education & Innovation</p>
+    <a href="admission.html" class="btn-primary">Apply for Admission</a>
 </section>
+
+<!-- ================= ABOUT PREVIEW ================= -->
+<section class="section">
+    <h2>About Our University</h2>
+    <p>
+        ABC University is a premier institution committed to academic excellence,
+        innovation, and holistic development. With experienced faculty and
+        industry-aligned curriculum, we prepare students for real-world challenges.
+    </p>
+    <a href="about.html" class="btn-secondary">Read More</a>
+</section>
+
+<!-- ================= KEY HIGHLIGHTS ================= -->
+<section class="section light-bg">
+    <h2>Why Choose ABC University?</h2>
+
+    <div class="cards">
+        <div class="card">
+            <h3>Experienced Faculty</h3>
+            <p>Highly qualified professors with industry and academic experience.</p>
+        </div>
+        <div class="card">
+            <h3>Modern Infrastructure</h3>
+            <p>Smart classrooms, digital labs, and a well-equipped library.</p>
+        </div>
+        <div class="card">
+            <h3>Career-Oriented Courses</h3>
+            <p>Programs designed to match industry and future technology trends.</p>
+        </div>
+    </div>
+</section>
+
+<!-- ================= COURSES PREVIEW ================= -->
+<section class="section">
+    <h2>Popular Courses</h2>
+
+    <div class="cards">
+        <div class="card">BCA – Bachelor of Computer Applications</div>
+        <div class="card">MCA – Master of Computer Applications</div>
+        <div class="card">B.Tech – Engineering Programs</div>
+        <div class="card">MBA – Business Administration</div>
+    </div>
+
+    <a href="courses.html" class="btn-secondary">View All Courses</a>
+</section>
+
+<!-- ================= STATS ================= -->
+<section class="section light-bg stats">
+    <div class="stat">
+        <h3>10,000+</h3>
+        <p>Students</p>
+    </div>
+    <div class="stat">
+        <h3>500+</h3>
+        <p>Faculty Members</p>
+    </div>
+    <div class="stat">
+        <h3>95%</h3>
+        <p>Placement Rate</p>
+    </div>
+</section>
+
+<!-- ================= CONTACT CTA ================= -->
+<section class="section">
+    <h2>Get in Touch</h2>
+    <p>Have questions? Our admission team is here to help you.</p>
+    <a href="contact.html" class="btn-primary">Contact Us</a>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer>
+    <p>© 2025 ABC University. All Rights Reserved.</p>
+    <a href="login.html" class="admin-login">Admin / Staff Login</a>
+</footer>
 
 <script src="js/main.js"></script>
 </body>
