--- a/about.html
+++ b/about.html
@@ -1,2 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>About | ABC University</title>
+<meta name="description" content="Learn about ABC University, our mission, vision, and values.">
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<nav class="navbar"> <!-- same navbar everywhere --> </nav>
+
+<section class="section">
 <h2>About ABC University</h2>
-<p>ABC University provides quality education with modern infrastructure.</p>
+<p>
+ABC University is dedicated to delivering world-class education with a
+focus on innovation, research, and employability.
+</p>
+
+<h3>Our Mission</h3>
+<p>To empower students with knowledge, skills, and ethical values.</p>
+
+<h3>Our Vision</h3>
+<p>To become a globally recognized center of academic excellence.</p>
+</section>
+
+<footer>© 2025 ABC University</footer>
+<script src="js/main.js"></script>
+</body>
+</html>
