--- a/courses.html
+++ b/courses.html
@@ -1,7 +1,10 @@
-<h2>Courses Offered</h2>
-<ul>
-  <li>BCA</li>
-  <li>MCA</li>
-  <li>B.Tech</li>
-  <li>MBA</li>
-</ul>
+<section class="section">
+<h2>Our Academic Programs</h2>
+
+<div class="cards">
+  <div class="card">BCA – Computer Applications</div>
+  <div class="card">MCA – Advanced Computing</div>
+  <div class="card">B.Tech – Engineering</div>
+  <div class="card">MBA – Business Administration</div>
+</div>
+</section>
