--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,10 @@
+<section class="section">
 <h2>Contact Us</h2>
-<form>
-  <input placeholder="Name"><br>
-  <input placeholder="Email"><br>
-  <textarea placeholder="Message"></textarea><br>
-  <button>Submit</button>
+
+<form class="contact-form">
+<input type="text" placeholder="Full Name" required>
+<input type="email" placeholder="Email" required>
+<textarea placeholder="Your Message"></textarea>
+<button>Send Message</button>
 </form>
+</section>
