--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
+<div class="menu-toggle" onclick="toggleMenu()">☰</div>
 
 <!-- ================= HERO SECTION ================= -->
 <section class="hero">
