--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </nav>
-
+<button onclick="toggleTheme()" class="dark-btn">🌙</button>
 <!-- ================= HERO ================= -->
 <section class="hero">
     <h1>Welcome to ABC University</h1>
