--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+  <button onclick="toggleTheme()" class="dark-btn">🌙</button>
+
 <h2 id="welcome"></h2>
 <button onclick="logout()">Logout</button>
 
