--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,19 @@
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar">
+    <div class="logo">ABC University</div>
+
+    <!-- Hamburger -->
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+    <ul class="nav-links" id="navLinks">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="admission.html">Admission</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="login.html" class="admin-login">Admin / Staff Login</a></li>
+    </ul>
+</nav>
 <section class="section">
 <h2>Contact Us</h2>
 
