--- a/courses.html
+++ b/courses.html
@@ -1,4 +1,12 @@
-<!-- ================= NAVBAR ================= -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Login</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <!-- ================= NAVBAR ================= -->
 <nav class="navbar">
     <div class="logo">ABC University</div>
 
@@ -24,3 +32,5 @@
   <div class="card">MBA – Business Administration</div>
 </div>
 </section>
+    </body>
+</html>
