--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>About | ABC University</title>
+<meta name="description" content="Learn about ABC University, our mission, vision, and values.">
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+<nav class="navbar"> <!-- same navbar everywhere --> </nav>
 <!-- ================= NAVBAR ================= -->
 <nav class="navbar">
     <div class="logo">ABC University</div>
@@ -14,6 +25,7 @@
         <li><a href="login.html" class="admin-login">Admin / Staff Login</a></li>
     </ul>
 </nav>
+
 <section class="section">
 <h2>Contact Us</h2>
 
@@ -24,3 +36,8 @@
 <button>Send Message</button>
 </form>
 </section>
+
+<footer>© 2025 ABC University</footer>
+<script src="js/main.js"></script>
+</body>
+</html>
