--- a/courses.html
+++ b/courses.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login</title>
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<title>About | ABC University</title>
+<meta name="description" content="Learn about ABC University, our mission, vision, and values.">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <!-- ================= NAVBAR ================= -->
+<nav class="navbar"> <!-- same navbar everywhere --> </nav>
+<!-- ================= NAVBAR ================= -->
 <nav class="navbar">
     <div class="logo">ABC University</div>
 
@@ -22,6 +25,7 @@
         <li><a href="login.html" class="admin-login">Admin / Staff Login</a></li>
     </ul>
 </nav>
+
 <section class="section">
 <h2>Our Academic Programs</h2>
 
@@ -32,5 +36,8 @@
   <div class="card">MBA – Business Administration</div>
 </div>
 </section>
-    </body>
+
+<footer>© 2025 ABC University</footer>
+<script src="js/main.js"></script>
+</body>
 </html>
