--- a/admission.html
+++ b/admission.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Student Admission</title>
+<meta charset="UTF-8">
+<title>Student Admission</title>
     <link rel="stylesheet" href="css/style.css">
+<meta name="description" content="Learn about ABC University, our mission, vision, and values.">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+<nav class="navbar"> <!-- same navbar everywhere --> </nav>
+<!-- ================= NAVBAR ================= -->
+<nav class="navbar">
+    <div class="logo">ABC University</div>
+
+    <!-- Hamburger -->
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+    <ul class="nav-links" id="navLinks">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="courses.html">Courses</a></li>
+        <li><a href="admission.html">Admission</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="login.html" class="admin-login">Admin / Staff Login</a></li>
+    </ul>
+</nav>
+
+<section class="section">
 <h2>Student Admission Form</h2>
 
 <form id="admissionForm">
@@ -36,5 +58,9 @@
 <p id="successMsg"></p>
 
 <script src="js/admission.js"></script>
+</section>
+
+<footer>© 2025 ABC University</footer>
+<script src="js/main.js"></script>
 </body>
 </html>
