--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="courses.html">Courses</a></li>
         <li><a href="admission.html">Admission</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="achhi_vichar.html">Achhi Vichar</a></li>
         <li><a href="login.html" class="admin-login">Admin / Staff Login</a></li>
     </ul>
 </nav>
