--- a/achhi_vichar.html
+++ b/achhi_vichar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+<nav class="navbar"> <!-- same navbar everywhere --> </nav>
 <!-- ================= NAVBAR ================= -->
 <nav class="navbar">
     <div class="logo">ABC University</div>
@@ -38,5 +38,8 @@
 </section>
 
 <script src="js/achhi_vichar.js"></script>
+    
+<footer>© 2025 ABC University</footer>
 </body>
 </html>
+
