--- a/achhi_vichar.html
+++ b/achhi_vichar.html
@@ -40,6 +40,7 @@
 <script src="js/achhi_vichar.js"></script>
     
 <footer>© 2025 ABC University</footer>
+    <script src="js/main.js"></script>
 </body>
 </html>
 
