--- a/achhi_vichar.html
+++ b/achhi_vichar.html
@@ -29,5 +29,6 @@
 
 <script src="js/achhi_vichar.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
