--- a/contact.html
+++ b/contact.html
@@ -8,24 +8,6 @@
 </head>
 <body>
 
-<nav class="navbar"> <!-- same navbar everywhere --> </nav>
-<!-- ================= NAVBAR ================= -->
-<nav class="navbar">
-    <div class="logo">ABC University</div>
-
-    <!-- Hamburger -->
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-
-    <ul class="nav-links" id="navLinks">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="courses.html">Courses</a></li>
-        <li><a href="admission.html">Admission</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="achhi_vichar.html">Achhi Vichar</a></li>
-        <li><a href="login.html" class="admin-login">Admin / Staff Login</a></li>
-    </ul>
-</nav>
 
 <section class="section">
 <h2>Contact Us</h2>
@@ -40,5 +22,6 @@
 
 <footer>© 2025 ABC University</footer>
 <script src="js/main.js"></script>
+    <script src="js/navbar.js"></script>
 </body>
 </html>
