--- a/dashboard.html
+++ b/dashboard.html
@@ -23,5 +23,11 @@ function logout() {
   window.location.href = "login.html";
 }
 </script>
+  <h3>Student Distribution</h3>
+<canvas id="courseChart"></canvas>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="js/dashboard.js"></script>
+
 </body>
 </html>
