--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         </div>
     </div>
 </section>
+<section class="section fade-in">
+    <!-- page content -->
+</section>
 
 <!-- ================= FOOTER ================= -->
 <footer>
