--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@ focus on innovation, research, and employability.
 <h3>Our Vision</h3>
 <p>To become a globally recognized center of academic excellence.</p>
 </section>
+<section class="section fade-in">
+    <!-- page content -->
+</section>
 
 <footer>© 2025 ABC University</footer>
 <script src="js/main.js"></script>
