--- a/achhi_vichar.html
+++ b/achhi_vichar.html
@@ -26,6 +26,9 @@
 
     <p id="msg"></p>
 </section>
+<section class="section fade-in">
+    <!-- page content -->
+</section>
 
 <script src="js/achhi_vichar.js"></script>
     <script src="js/navbar.js"></script>
