--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,9 @@
         <th>Address</th>
     </tr>
 </table>
+<section class="section fade-in">
+    <!-- page content -->
+</section>
 
 <script src="js/admin.js"></script>
 </body>
