--- a/admission.html
+++ b/admission.html
@@ -29,6 +29,9 @@
 
 <p id="msg"></p>
 </section>
+<section class="section fade-in">
+    <!-- page content -->
+</section>
 
 <script src="js/admission.js"></script>
     
