--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<section class="section fade-in">
+    <!-- page content -->
+</section>
+    
 
 <section class="section">
 <h2>Contact Us</h2>
