--- a/courses.html
+++ b/courses.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+<section class="section fade-in">
+    <!-- page content -->
+</section>
 
 <section class="section">
 <h2>Our Academic Programs</h2>
