--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- ================= FOOTER ================= -->
 <footer>
-    <p>© 2025 ABC University. All Rights Reserved.</p>
+    <center><p>© 2025 ABC University. All Rights Reserved.</p></center>
 </footer>
 
 <script src="js/script.js"></script>
