--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ focus on innovation, research, and employability.
     <!-- page content -->
 </section>
 
-<footer>© 2025 ABC University</footer>
+<footer><center><p>© 2025 ABC University. All Rights Reserved.</p></center></footer>
 <script src="js/main.js"></script>
     <script src="js/navbar.js"></script>
 </body>
