--- a/achhi_vichar.html
+++ b/achhi_vichar.html
@@ -33,5 +33,6 @@
 <script src="js/achhi_vichar.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/main.js"></script>
+    <fotter><center><p>© 2025 ABC University. All Rights Reserved.</p></center></fotter>
 </body>
 </html>
