--- a/admin.html
+++ b/admin.html
@@ -23,5 +23,6 @@
 </section>
 
 <script src="js/admin.js"></script>
+    <fotter><center><p>© 2025 ABC University. All Rights Reserved.</p></center></fotter>
 </body>
 </html>
