--- a/admission.html
+++ b/admission.html
@@ -36,7 +36,7 @@
 <script src="js/admission.js"></script>
     
 
-<footer>© 2025 ABC University</footer>
+<footer><center><p>© 2025 ABC University. All Rights Reserved.</p></center></footer>
 <script src="js/main.js"></script>
     <script src="js/navbar.js"></script>
 </body>
