--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 </form>
 </section>
 
-<footer>© 2025 ABC University</footer>
+<footer><center><p>© 2025 ABC University. All Rights Reserved.</p></center></footer>
 <script src="js/main.js"></script>
     <script src="js/navbar.js"></script>
 </body>
