--- a/courses.html
+++ b/courses.html
@@ -23,7 +23,7 @@
 </div>
 </section>
 
-<footer>© 2025 ABC University</footer>
+<footer><center><p>© 2025 ABC University. All Rights Reserved.</p></center></footer>
 <script src="js/main.js"></script>
     <script src="js/navbar.js"></script>
 </body>
