--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <p>Once Again Visit</p>
     <a href="admission.html" class="btn-primary">Apply for Admission</a>
 </section>
+    <section class="herofirst">
+            <a href="admission.html" class="btn-primary">Apply for Admission</a>
+    </section>
 
 <!-- ================= ABOUT ================= -->
 <section class="section">
