--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
 
 <script src="js/ai-agent.js"></script>
 
-
+<div class="ai-box">
+    <h3>University AI Assistant</h3>
+    <input id="aiInput" placeholder="Ask something...">
+    <button onclick="askAI()">Ask</button>
+    <p id="aiReply"></p>
+</div>
 <!-- ================= FOOTER ================= -->
 <footer>
     <center><p>© 2025 ABC University. All Rights Reserved.</p></center>
