--- a/index.html
+++ b/index.html
@@ -76,5 +76,6 @@
 
 <script src="js/script.js"></script>
 <script src="js/navbar.js"></script>
+ <script src="js/theme.js"></script>
 </body>
 </html>
