--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
 
 <script src="js/auth.js"></script>
   <script src="js/navbar.js"></script>
+  <script src="js/theme.js"></script>
   <fotter><center><p>© 2025 ABC University. All Rights Reserved.</p></center></fotter>
 </body>
 </html>
