--- a/contact.html
+++ b/contact.html
@@ -27,5 +27,6 @@
 <footer><center><p>© 2025 ABC University. All Rights Reserved.</p></center></footer>
 <script src="js/main.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
