--- a/achhi_vichar.html
+++ b/achhi_vichar.html
@@ -33,6 +33,7 @@
 <script src="js/achhi_vichar.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/theme.js"></script>
     <fotter><center><p>© 2025 ABC University. All Rights Reserved.</p></center></fotter>
 </body>
 </html>
