--- a/about.html
+++ b/about.html
@@ -27,7 +27,8 @@ focus on innovation, research, and employability.
 </section>
 
 <footer><center><p>© 2025 ABC University. All Rights Reserved.</p></center></footer>
-<script src="js/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 </html>
