--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
            onkeypress="if(event.key==='Enter') respondAI()">
 </div>
 
-<script src="js/ai-agent.js"></script>
+<script src="js/maintenance.js"></script>
 
 <div class="ai-box">
     <h3>University AI Assistant</h3>
