--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
     <!-- page content -->
 </section>
     <!-- AI Agent Button -->
-<div id="aiAgentBtn">🤖</div>
+<div id="aiAgentBtn" <script src="js/maintenance.js"></script> >🤖</div>
 
 <!-- AI Agent Chat Box -->
-<div id="aiAgentBox">
+<div id="aiAgentBox" >
     <div class="ai-header">AI Assistant</div>
     <div id="aiMessages"></div>
     <input type="text" id="aiInput" placeholder="Ask me something..."
            onkeypress="if(event.key==='Enter') respondAI()">
 </div>
 
-<script src="js/maintenance.js"></script>
+<script src="js/ai-agent.js"></script>
 
 <div class="ai-box">
     <h3>University AI Assistant</h3>
