--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <!-- page content -->
 </section>
     <!-- AI Agent Button -->
-<div id="aiAgentBtn" <script src="js/maintenance.js"></script> >🤖</div>
+<div id="aiAgentBtn" <script src="js/maintenance.js"></script> 🤖</div>
 <!-- ================= FOOTER ================= -->
 <footer>
-    <center><p>© 2025 ABC University. All Rights Reserved.</p></center>
+    <center><p>© 2026 ABC University. All Rights Reserved.</p></center>
 </footer>
 
 <script src="js/script.js"></script>
